# zai

./: 404.html  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml  release.yml
assets/js/: 00ec9108.f4ee7b0f.js  0261fb0e.191f6252.js  04b0e22c.5a946eea.js  05492d56.dfcd10df.js  089666de.9c759a28.js  09a1246f.4a853310.js  0a45c249.e1b3c10a.js  0e8f5fe6.7880c700.js  11d1275f.a4fc7c63.js  125ecc8b.5e034307.js  12706580.0fdb1048.js  144b023b.46e42be3.js  149aeb88.f849ac44.js  14e88928.1cbd70e2.js  15a67330.a14609d9.js  17de5c69.0097d804.js  19eb0775.be0f400d.js  19fe86b5.f0617eae.js  1e349b01.837e55d2.js  203a101a.5b8e3f57.js  234c79f1.0d766563.js  240375a0.b0c26171.js  241bbc51.1ab5d0d6.js  26c5ad2c.6d31dce2.js  2a177f08.5423a52e.js  2d975a58.9d659902.js  31c03cb6.b66d677e.js  350e0713.e6af92e0.js  3595da8b.ce7266b0.js  384b152f.e6e3b332.js  3a4b97be.518e1559.js  3b1a06c8.cca9198d.js  3cbb83c6.0362877c.js  3d2ff19f.351ba6ac.js  3dae7375.822b6bea.js  3f31c3ea.99bc8632.js  3f7f3aeb.016f1c30.js  4144d7ff.e9d684a0.js  43aee873.96fa6308.js  469e057a.3fa80b34.js  (+120 more)
blog/: index.html
blog/README/: index.html
blog/archive/: index.html
blog/authors/: index.html
community/: index.html
crates/goose-cli/: Cargo.toml
deeplink-generator/: index.html
docs/experimental/: index.html
docs/goose-architecture/: index.html
docs/quickstart/: index.html
extension/: index.html
extensions/: index.html
grants/: index.html
markdown-page/: index.html
prompt-library/: index.html
recipe-generator/: index.html
recipes/: index.html
recipes/detail/: index.html
(+248 files in other folders)
