[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.16.0"
authors = ["Z.ai <ai-oss-tools@z.ai>"]
license = "Apache-2.0"
repository = "https://github.com/z-ai/zai-coding-agent"
description = "Z.ai Coding Agent - AI-powered coding assistant"

[workspace.lints.clippy]
uninlined_format_args = "allow"
string_slice = "warn"

[workspace.dependencies]
rmcp = { version = "0.9.1", features = ["schemars", "auth"] }

# Patch for Windows cross-compilation issue with crunchy
[patch.crates-io]
crunchy = { git = "https://github.com/nmathewson/crunchy", branch = "cross-compilation-fix" }
